# Velocity

./: .gitignore  .gitmodules  AGENTS.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COMPILING  COMPILING.md  Makefile  README.md  STFS Notes.txt  app.entitlements  build_app  build_mac  build_windows.ps1  deploy_mac.sh  makefile  test_gpd_thumbnail.cpp
.github/: copilot-instructions.md
.github/prompts/: speckit.analyze.prompt.md  speckit.checklist.prompt.md  speckit.clarify.prompt.md  speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md
.specify/memory/: constitution.md
.specify/scripts/powershell/: create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
Gamedatabase/: gamedatabase.json  gamedatabase.md
Icons/: ProfileEditorIcon.psd
Velocity/: AvatarAssetDownloader.cpp  AvatarAssetDownloader.h  CMakeLists.txt  FileIO.cpp  FileIO.h  Info.plist.app  Makefile  MemoryStream.cpp  MemoryStream.h  Resources.qrc  StfsLib_global.h  Velocity.pro  about.cpp  about.h  about.ui  achievementcreationwizard.cpp  achievementcreationwizard.h  achievementcreationwizard.ui  addressconverterdialog.cpp  addressconverterdialog.h  addressconverterdialog.ui  avatarassetdownloader.cpp  boxartretriever.cpp  boxartretriever.h  certificatedialog.cpp  certificatedialog.h  certificatedialog.ui  clustertooldialog.cpp  clustertooldialog.h  clustertooldialog.ui  creationwizard.cpp  creationwizard.h  creationwizard.ui  devicecontentviewer.cpp  devicecontentviewer.h  devicecontentviewer.ui  devicenotifier.cpp  devicenotifier.h  deviceviewer.cpp  deviceviewer.h  (+190 more)
Velocity/Account/: Account.cpp  Account.h  AccountDefinitions.h  AccountHelpers.cpp  AccountHelpers.h
Velocity/AvatarAsset/: AssetHelpers.cpp  AssetHelpers.h  AvatarAsset.cpp  AvatarAsset.h  AvatarAssetDefinintions.h
Velocity/Binaries/: femaleAvatar.h
Velocity/Disc/: gdfx.cpp  gdfx.h  svod.cpp  svod.h
Velocity/GPD/: AvatarAwardGPD.cpp  AvatarAwardGPD.h  DashboardGPD.cpp  DashboardGPD.h  GPDBase.cpp  GPDBase.h  GameGPD.cpp  GameGPD.h  XDBF.cpp  XDBF.h  XDBFDefininitions.h  XDBFHelpers.cpp  XDBFHelpers.h
Velocity/IO/: BaseIO.cpp  BaseIO.h  MultiFileIO.cpp  MultiFileIO.h  SvodIO.cpp  SvodIO.h
Velocity/Images/: Thumbs.db
Velocity/PluginInterfaces/: igamemodder.h  igpdmodder.h
Velocity/Stfs/: SHA1.cpp  StfsConstants.h  StfsDefinitions.cpp  StfsDefinitions.h  StfsLib.cpp  StfsMetaData.cpp  StfsMetaData.h  StfsPackage.cpp  StfsPackage.h  XContentHeader.cpp  XContentHeader.h
Velocity/Velocity.app/Contents/: Info.plist
Velocity/Velocity.app/Contents/MacOS/: Velocity
XboxInternals/: CMakeLists.txt  FileIO.cpp  FileIO.h  TypeDefinitions.h  Utils.cpp  Utils.h  XboxInternals.pro  XboxInternals.sln  XboxInternals.vcxproj  XboxInternals.vcxproj.filters  XboxInternals_global.h  winnames.h
XboxInternals/Account/: Account.cpp  Account.h  AccountDefinitions.h  AccountHelpers.cpp  AccountHelpers.h
XboxInternals/AvatarAsset/: AssetHelpers.cpp  AssetHelpers.h  AvatarAsset.cpp  AvatarAsset.h  AvatarAssetDefinintions.h  AvatarAssetDefinitions.h  YTGR.cpp  YTGR.h  Ytgr.cpp  Ytgr.h
XboxInternals/Cryptography/: XeCrypt.cpp  XeCrypt.h  XeKeys.cpp  XeKeys.h
XboxInternals/Disc/: Gdfx.cpp  Gdfx.h  ISO.cpp  ISO.h  Svod.cpp  Svod.h  gdfx.cpp  gdfx.h  svod.cpp  svod.h
XboxInternals/FATX/: FatxConstants.h  FatxDrive.cpp  FatxDrive.h  FatxDriveDetection.cpp  FatxDriveDetection.h  fatxhelpers.cpp  fatxhelpers.h
XboxInternals/Fatx/: FatxConstants.h  FatxDrive.cpp  FatxDrive.h  FatxDriveDetection.cpp  FatxDriveDetection.h  FatxHelpers.cpp  FatxHelpers.h  XContentDevice.cpp  XContentDevice.h  XContentDeviceItem.cpp  XContentDeviceItem.h  XContentDeviceProfile.cpp  XContentDeviceProfile.h  XContentDeviceSharedItem.cpp  XContentDeviceSharedItem.h  XContentDeviceTitle.cpp  XContentDeviceTitle.h
XboxInternals/GPD/: AvatarAwardGPD.cpp  AvatarAwardGPD.h  DashboardGPD.cpp  DashboardGPD.h  GPDBase.cpp  GPDBase.h  GameGPD.cpp  GameGPD.h  XDBF.cpp  XDBF.h  XDBFDefininitions.h  XDBFHelpers.cpp  XDBFHelpers.h
XboxInternals/Gpd/: AvatarAwardGpd.cpp  AvatarAwardGpd.h  DashboardGpd.cpp  DashboardGpd.h  GameGpd.cpp  GameGpd.h  GpdBase.cpp  GpdBase.h  Xdbf.cpp  Xdbf.h  XdbfDefininitions.h  XdbfDefinitions.h  XdbfHelpers.cpp  XdbfHelpers.h
XboxInternals/IO/: BaseIO.cpp  BaseIO.h  BigFileIO.cpp  BigFileIO.h  DeviceIO.cpp  DeviceIO.h  FatxIO.cpp  FatxIO.h  FatxIndexableMultiFileIO.cpp  FatxIndexableMultiFileIO.h  FileIO.cpp  FileIO.h  IndexableMultiFileIO.cpp  IndexableMultiFileIO.h  IsoIO.cpp  IsoIO.h  JoinedMultiFileIO.cpp  JoinedMultiFileIO.h  LocalIndexableMultiFileIO.cpp  LocalIndexableMultiFileIO.h  MemoryIO.cpp  MemoryIO.h  MultiFileIO.cpp  MultiFileIO.h  StfsIO.cpp  StfsIO.h  SvodIO.cpp  SvodIO.h  SvodMultiFileIO.cpp  SvodMultiFileIO.h  XexAesIO.cpp  XexAesIO.h  XexBaseIO.cpp  XexBaseIO.h  XexZeroBasedCompressionIO.cpp  XexZeroBasedCompressionIO.h
XboxInternals/PluginInterfaces/: igamemodder.h  igpdmodder.h
XboxInternals/Stfs/: Botan.pri  IXContentHeader.cpp  IXContentHeader.h  StfsConstants.h  StfsDefinitions.cpp  StfsDefinitions.h  StfsPackage.cpp  StfsPackage.h  XContentHeader.cpp  XContentHeader.h
XboxInternals/Xex/: Xex.cpp  Xex.h  XexDefinitions.h  Xuiz.cpp  Xuiz.h
cmake/: FindBotan.cmake  botan_modules.cmake
specs/001-baseline-capabilities/: ANALYSIS-CORRECTIONS.md  ANALYSIS-REMEDIATION.md  AUDIT-ADDENDUM.md  EXPANSION-SUMMARY.md  FULL-REFACTORING-PLAN.md  PHASE-1-COMPLETE.md  PHASE-2-COMPLETE.md  PHASE-2-STRATEGY.md  PHASE-2A-RESULTS.md  PHASE-2B-RESULTS.md  PHASE-2C-RESULTS.md  PHASE-2D-RESULTS.md  PHASE-2E-RESULTS.md  PHASE-2F-RESULTS.md  PLATFORM-API-REFERENCE.md  SHOULD-WE-ABSTRACT-FURTHER.md  TYPEDEF-BREAKAGE-EXAMPLES.md  WHY-PLATFORM-TYPEDEFS.md  data-model.md  plan.md  platform-audit.md  quickstart.md  research.md  spec.md  tasks.md  test_large_file.cpp
specs/001-baseline-capabilities/checklists/: requirements.md
specs/001-baseline-capabilities/contracts/: ui-actions.md
